--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,9 @@ body{
     color:var(--primary);
     letter-spacing: 2px;
 }
+.logo-name{
+    color:var(--primary);
+}
 
 header{
     background-color:#1b1f24;
@@ -26,21 +29,21 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-ul{
+header ul{
     display: flex;
     list-style: none;
     
 }
-ul > li{
+ header ul  li{
     display: flex;
     margin-right: 10px;
     
 }
-ul li a{
+ header ul li a{
     color: white;
     text-decoration: none;
 }
-ul li a:hover{
+header ul li a:hover{
     color: var(--primary);
 }
 header button{
@@ -57,6 +60,17 @@ header button:hover{
     background-color: var(--primary);
     color: white;
 }
+.btn{
+    padding: 7px 7px 7px 7px;
+    border-radius: 10px;
+    background-color: var(--primary-color);
+    color:var(--primary);
+    border: 1px solid var(--primary);
+}
+.btn:hover{
+    background-color: var(--primary);
+    color: white; 
+}
 
  /* Hero Section */
  section.hero-section{
@@ -72,4 +86,28 @@ header button:hover{
  }
  .hero-section-desc{
     color: #12bdff;
+ }
+ .social-icon{
+   margin: 20px 0; 
+   display: flex;
+ }
+ .social-icon li{
+    margin-right: 15px;
+ }
+ .social-icon li a{
+    text-decoration: none;
+    color: white;
+ }
+ ul.social-icon{
+   list-style: none;
+ }
+ .social-icon li a:hover{
+    color:var(--primary);
+ }
+ .btn-primary{
+  background-color: var(--primary); 
+  color: WHITE; 
+ }
+ .btn-primary:hover{
+    background-color: var(--primary-color);
  }
