--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 :root{
     --primary: #12bdff;
     --primary-color:#1b1f24;
+    --primary-hover:hsl(197, 80%, 37%);
 }
 body{
     font-family: 'Nunito Sans', sans-serif;
@@ -109,5 +110,51 @@ header button:hover{
   color: WHITE; 
  }
  .btn-primary:hover{
-    background-color: var(--primary-color);
+    background-color:var(--primary-hover) ;
  }
+
+/*  About Section */
+.about-section{
+    background-color:#22282f;
+    color:white;
+    padding:60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about-desc{
+    margin-left:100px; 
+    max-width: 450px;
+}
+.about-section img{
+    width:450px;
+    border-radius: 10px; 
+    border: 3px solid var(--primary);
+    box-shadow: 4px 6px 40px var(--primary);
+}
+.about-desc h4{
+   font-size: 30px;
+   font-weight: 900;
+} 
+.about-desc h4 span{
+    color: var(--primary);
+}
+.about-desc ul {
+    list-style: none;
+    margin: 10px 0;
+}
+.about-desc li{
+    margin-bottom:8px;
+    color:gray;
+}
+.about-desc li strong{
+color: white;
+}
+.about-desc li a{
+    color:gray;
+    text-decoration: none;
+}
+.about-desc li a:hover{
+    color:var(--primary-hover)
+}
+ 
