--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ header ul{
     
 }
  header ul li a{
-    color: rgb(22, 41, 214);
+    color:rgb(5, 255, 243);
     text-decoration: none;
     display: flex;
     justify-content:flex-end;
@@ -135,7 +135,7 @@ header button:hover{
 }
 .about-section img{
     width:450px;
-    border-radius: 75%; 
+    border-radius:10%; 
     border: 3px solid var(--primary);
     box-shadow: 4px 6px 40px rgba(0, 255, 191, 0.959);
 }
@@ -171,10 +171,10 @@ color: white;
     margin-bottom: 40px;
 }
 .work-title span{
-    color: var(--primary);
+    color:rgb(5, 255, 243);
 }
 .work-section{
-    background-color: var(--primary-color);
+    background-color:#9370DB;
     color:white;
     padding: 60px;
     text-align: center;
@@ -184,17 +184,18 @@ color: white;
     justify-content:center; 
 }
 .work-box{
-    background-color:#5bad0fda;
+    background-color: #663399;
     padding:30px;
     max-width: 300px;
     text-align: left;
     border-radius: 10px;
-    box-shadow: 5px 5px 5px var(--primary-hover);
+    box-shadow: 3px 3px 3px rgb(5, 255, 243);
     cursor: pointer;
     margin-right: 40px;
 }
 .work-box:hover{
     background-color:#1f498386 ;
+    box-shadow:  3px 3px 3px 3px rgb(5, 255, 243);
 }
 .work-box p{
      margin-top: 7px; 
@@ -203,13 +204,18 @@ color: white;
 }
 .work-box a{
  text-decoration:none;
- color:rgb(130, 160, 80);
+ color:#00FF7F;
  display: block;
  margin-top:7px;
+}
+.work-box h4{
+    color: rgb(5, 255, 243) ;
+    padding-top: 10px;
 }
 .work-icon{
 padding-bottom: 10px;
 }
+
 .hand-wave {
     display: inline-block;
     animation: heyy 3s infinite;
@@ -226,12 +232,46 @@ footer p {
 }
 
 footer p a {
-    color: rgb(4, 0, 255);
+    color:#FFFF00;
 }
 
 footer p a:hover {
     color:rgb(247, 0, 255);
 }
+
+/* Hand-wave-section */
+
+@keyframes wave {
+    0% {
+      transform: rotate(0deg);
+    }
+    10% {
+      transform: rotate(16deg);
+    }
+    20% {
+      transform: rotate(-6deg);
+    }
+    30% {
+      transform: rotate(16deg);
+    }
+    40% {
+      transform: rotate(-4deg);
+    }
+    50% {
+      transform: rotate(16deg);
+    }
+    60% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+  .waving-hand:hover{
+    animation: wave 2.1s 0.6s infinite;
+    transform-origin: 75% 75%;
+    display: inline-block;
+  }
 @media only screen and (max-width: 600px) {
     header {
       flex-direction: column;
