--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ ul.social-icon {
   max-width: 450px;
 }
 .about-section img {
-  width: 450px;
+  width: fit-content;
   border-radius: 10%;
   border: 3px solid var(--primary);
   box-shadow: 4px 6px 40px rgba(0, 255, 191, 0.959);
